--- a/404.html
+++ b/404.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url='https://hohscubing.net'" />
+<meta http-equiv="refresh" content="0; url='https://files.hohscubing.net'" />
